--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			</a>			
 			<div class="contenedor3">
 				<h4 class="textobien">Bienvenidos</h4>
-				<img src="IMG/aprende.png" style="margin-left: 10px;">				
+				<img src="aprende.png" style="margin-left: 10px;">				
 			</div>
 		</div>
 	</div>
