--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 	<div class="contenedor">
 		<div class="contenedor1">			
-			<img class="imgcont" src="IMG/Diapositiva1.PNG">
+			<img class="imgcont" src="Diapositiva1.PNG">
 		</div>
 		<div class="contenedor2">
 			<a href="pag1.html" class="button-icon">				
