--- a/pag13.html
+++ b/pag13.html
@@ -14,7 +14,7 @@
 <body>
 	<div class="contenedor">
 		<div class="contenedor1">
-			<img class="imgcont" src="IMG/Diapositiva14.PNG">
+			<img class="imgcont" src="Diapositiva14.PNG">
 		</div>
 		<div class="contenedor2">
 			<a href="index.html">				
@@ -28,7 +28,7 @@
 			</a>
 
 			<div class="contenedor3">
-				<img class="imgoea" src="IMG/ptee.jpg">
+				<img class="imgoea" src="ptee.jpg">
 			</div>
 		</div>
 	</div>
