--- a/pag24.html
+++ b/pag24.html
@@ -14,7 +14,7 @@
 <body>
 	<div class="contenedor">
 		<div class="contenedor1">
-			<img class="imgcont" src="IMG/Diapositiva25.PNG">
+			<img class="imgcont" src="Diapositiva25.PNG">
 		</div>
 		<div class="contenedor2">
 			<a href="index.html">				
@@ -30,7 +30,7 @@
 			<div class="contenedor3">
 				<h6 class="text1">Click aqui para ir a exámen</h6>
 				<a href="https://forms.office.com/pages/responsepage.aspx?id=Ih2nBgmxLk-Tg0tsY3v1jlAWSnCfv-lGhXEqCIgrTm1UQzU0RDdPUUc1V1BTODRaSDJJVTlQVkRKQi4u" target="_blank">
-					<img src="IMG/icon1.png" class="iconcon3">
+					<img src="icon1.png" class="iconcon3">
 				</a>
 			</div>
 		</div>
