--- a/pag24.html
+++ b/pag24.html
@@ -14,7 +14,7 @@
 <body>
 	<div class="contenedor">
 		<div class="contenedor1">
-			<img class="imgcont" src="Diapositiva25.PNG">
+			<img class="imgcont" src="Diapositiva25.png">
 		</div>
 		<div class="contenedor2">
 			<a href="index.html">				
