--- a/pag24.html
+++ b/pag24.html
@@ -29,7 +29,7 @@
 
 			<div class="contenedor3">
 				<h6 class="text1">Click aqui para ir a exámen</h6>
-				<a href="https://forms.office.com/pages/responsepage.aspx?id=Ih2nBgmxLk-Tg0tsY3v1jlAWSnCfv-lGhXEqCIgrTm1UQzU0RDdPUUc1V1BTODRaSDJJVTlQVkRKQi4u" target="_blank">
+				<a href="https://forms.office.com/r/x4WA5JrBHy" target="_blank">
 					<img src="icon1.png" class="iconcon3">
 				</a>
 			</div>
